<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Find My Migraine</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome">What do you want to do?</string>
    <string name="record_attack">Migraine Attack Record</string>
    <string name="record_activity">Daily Events Diary</string>
    <string name="action_settings">Setup</string>
    <string name="action_help">Help</string>
    <string name="login">Login screen</string>
    <string name="okay">Okay</string>
    <string name="title_activity_attack">Migraine Attack Record</string>
    <string name="title_activity_daily">Daily Events Diary</string>
    <string name="title_activity_sleep">Daily Sleeping Record</string>
    <string name="sleep_tt">Time to sleep</string>
    <string name="sleep_tu">Time up</string>
    <string name="sleep_r">Sleep rating (1 - Poor.. 5 - Good)</string>
    <string name="next">Next</string>
    <string name="title_activity_sleep_entry_report">Sleep Entry Report - The following details have been added to your Daily Activity Record: </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_exercise">Daily Exercise Record</string>
    <string name="title_activity_mood">Daily Mood Record</string>
    <string name="title_activity_travel">Daily Travel Record</string>
    <string name="title_activity_when">When did it happen?</string>
    <string name="title_activity_severity">How bad was it? - Inactive</string>
    <string name="title_activity_coping">Migraine Attack Coping Strategy</string>
    <string name="title_activity_causes">What might have caused it? - Inactive</string>
    <string name="when_date">Date of migraine</string>
    <string name="when_start">Time migraine started</string>
    <string name="when_end">Time migraine ended</string>
    <string name="title_activity_review">Review Records</string>
    <string name="sleep_details">Sleep Details</string>
    <string name="sleep_date">Date (when waking)</string>
    <string name="title_activity_activity_coping">Migraine Attack Coping Strategy</string>
    <string name="title_attack_when">When did it happen?</string>
    <string name="title_attack_severity">How bad was it?</string>
    <string name="title_attack_coping">How did you deal with it?</string>
    <string name="title_attack_causes">What might have caused it?</string>
    <string name="title_activity_drink_food">Food and Drink Record</string>
    <string name="title_activity_intensity">Intensity Record</string>
    <string name="title_activity_menstrual_cycle">Menstrual Cycle</string>
    <string name="menstrual_cycle_question">Were you having your menstrual cycle?</string>
    <string name="title_activity_review_attacks">ReviewAttacks</string>
    <string name="title_activity_review_attack_record">ReviewAttackRecord</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="title_activity_work">WorkActivity</string>

</resources>
