<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/material_blue_grey_800"
    tools:context="com.example.migraineapp.AttackActivity">

    <TextView android:text="@string/welcome"
        android:textColor="@color/link_text_material_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_small" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_attack_when"
        android:id="@+id/btnWhen"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_attack_severity"
        android:id="@+id/btnSeverity"
        android:layout_below="@+id/btnWhen"
        android:layout_alignRight="@+id/btnWhen"
        android:layout_alignEnd="@+id/btnWhen" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_attack_coping"
        android:id="@+id/btnCoping"
        android:layout_below="@+id/btnSeverity"
        android:layout_alignRight="@+id/btnSeverity"
        android:layout_alignEnd="@+id/btnSeverity" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_attack_causes"
        android:id="@+id/btnCauses"
        android:layout_below="@+id/btnCoping"
        android:layout_alignRight="@+id/btnCoping"
        android:layout_alignEnd="@+id/btnCoping" />

</RelativeLayout>
