<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/material_blue_grey_800"
    tools:context="com.example.migraineapp.DailyActivity">

    <TextView android:text="@string/welcome"
        android:textColor="@color/link_text_material_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_small" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_sleep"
        android:id="@+id/btnSleep"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_exercise"
        android:id="@+id/btnExercise"
        android:layout_below="@+id/btnSleep"
        android:layout_alignRight="@+id/btnSleep"
        android:layout_alignEnd="@+id/btnSleep" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_travel"
        android:id="@+id/btnTravel"
        android:layout_below="@+id/btnExercise"
        android:layout_alignRight="@+id/btnExercise"
        android:layout_alignEnd="@+id/btnExercise" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Mood"
        android:id="@+id/btnMood"
        android:layout_below="@+id/btnTravel"
        android:layout_alignRight="@+id/btnTravel"
        android:layout_alignEnd="@+id/btnTravel" />



</RelativeLayout>
