<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.migraineapp.SleepActivity"-->

    <TextView android:text="@string/title_activity_sleep"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/slpTitle" />

    <!-- Date entry -->
    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/sleep_date"
            android:id="@+id/lb_sleep_date"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="16"
            android:layout_marginLeft="15dp"

            android:text="Click here"
            android:id="@+id/et_sleep_date"
            />
        </LinearLayout>
    -->



    <!-- Time to Bed -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sleep_tt"
        android:id="@+id/lbTTB"
         />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="16"
        android:layout_marginLeft="15dp"

        android:text="Click here"
        android:id="@+id/etTTB"
         />

    </LinearLayout>


    <!-- Time UP -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sleep_tu"
        android:id="@+id/lbTU"
         />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="16"
        android:layout_marginLeft="15dp"
        android:text="Click here"
        android:id="@+id/etTU"
        />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sleep_r"
        android:id="@+id/lbSR"
         />
    </LinearLayout>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1"
         />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/btnNext"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/etSR"
        android:layout_alignEnd="@+id/etSR" />

</LinearLayout>
